# HamBros

./: .gitignore  COMMERCIAL-LICENSING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: .env.example  .gitignore  capacitor.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/agents/terminal_bench/: .gitignore  README.md  pyproject.toml
app/agents/terminal_bench/hammurabi_tbench/: __init__.py  hammurabi_agent.py  telemetry.py  tools.py
app/data/: machines.json  machines.json.example
app/data/sentinels/: sentinels.json
app/docs/: auth0-rbac-manual-checklist.md
app/modules/agents/: index.ts  message-queue.ts  normalize-claude-event.ts  normalize-codex-event.ts  normalize-gemini-event.ts  normalize-openclaw-event.ts  page.tsx  routes.ts  session-tab.ts  transcript-store.ts
app/modules/api-keys/: page.tsx
app/modules/command-room/: executor.ts  page.tsx  routes.ts  run-store.ts  scheduler.ts  task-store.ts
app/modules/commanders/: README.md  agent.ts  choose-heartbeat-mode.ts  cron-manager.ts  cron-store.ts  cron.ts  heartbeat-log.ts  heartbeat.ts  manager.ts  names-lock.ts  (+8 more)
app/scripts/: commander-memory-index.py  commander-memory-restore.sh  commander-memory-sync.sh  nightly-daily-review.sh  seed-commander-names.ts  start-with-memory-restore.sh
app/server/: index.ts  module-registry.ts
app/src/: App.tsx  index.css  module-registry.ts
docs/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/app/: globals.css  layout.tsx  page.tsx
(+230 files in other folders)
